--- a/src/main/resource/application.yml
+++ b/src/main/resource/application.yml
@@ -3,3 +3,23 @@ server:
 spring:
   application:
     name: code-learn
+  datasource:
+    url: jdbc:mysql://localhost:3306/mybaties?useUnicode=true&useSSL=false&allowMultiQueries=true
+    #    url: jdbc:mysql://10.253.50.250:3306/yunce?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    #    username: zzyq
+    #    password: 1qaz2WSX!@
+    password: zxx1994
+    driver-class-name: com.mysql.jdbc.Driver
+    type:  com.zaxxer.hikari.HikariDataSource
+
+  redis:
+    host: localhost
+    port: 6379
+logging:
+  file: logs/log.log
+  level.root: warn
+  #  pattern:
+  #    console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{10} - %m%n'
+  #    file: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{10} - %m%n'
+  level.pri.zxx.webdemo.mappers: warn
