--- a/src/main/resource/application.yml
+++ b/src/main/resource/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9700
+  port: 19945
 spring:
   application:
     name: code-learn
@@ -11,7 +11,7 @@ spring:
     type:  com.zaxxer.hikari.HikariDataSource
 
   redis:
-    host: localhost
+    host: 10.253.254.17
     port: 6379
 logging:
   file: logs/log.log
